[package]
name = "apng"
version = "0.3.5"
authors = [
  "poccariswet <poccariswet2727@gmail.com>",
  "Orhun Parmaksız <orhunparmaksiz@gmail.com>",
]
edition = "2021"
description = "APNG Encoder. But it is tiny yet."
license = "MIT"
repository = "https://github.com/poccariswet/apng"
readme = "README.md"

[dependencies]
png = "0.17.16"
thiserror = "2.0.12"
byteorder = "1.5.0"
flate2 = "1.1.1"
image = { version = "0.25.6", default-features = false, features = ["png"] }

[features]
# re-exports png crate
png = []
